--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,12 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		<version>5.1.6</version>
+		</dependency>
+		
 	</dependencies>
 	
 	<build>
